hphp/hack/test/typecheck/as_expression/invalid_hint_class_with_generics.php.like_types.exp
File "invalid_hint_class_with_generics.php", line 9, characters 16-17:
Invalid argument (Typing[4110])
File "invalid_hint_class_with_generics.php", line 6, characters 11-13:
Expected int
File "invalid_hint_class_with_generics.php", line 12, characters 25-27:
But got dynamic because it is an unenforceable type
File "invalid_hint_class_with_generics.php", line 6, characters 9-14:
Invalid "as" expression hint (Typing[4195])
File "invalid_hint_class_with_generics.php", line 6, characters 9-14:
The "as" operator cannot be used with a type with an erased generic type argument
